@@ -64,6 +64,7 @@ version <next>:
 - new DCA decoder with full support for DTS-HD extensions
 - significant performance improvements in Windows Television (WTV) demuxer
 - nnedi deinterlacer
+- streamselect video and astreamselect audio filter
 
 
 version 2.8:
